# manola

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR-0001-local-first-cli.md  ADR-0002-windows-recording-spike.md  ADR-0003-ui-job-model.md  PRD-Future-Vision.md  PRD-UI-Functional-Completion.md  PRD.md  STATUS.md  UI_PLAN.md
docs/agents/: domain.md  issue-tracker.md
src/manola/: audio.py  audio_recording.py  cli.py  config.py  diarization.py  doctor.py  errors.py  exporting.py  jobs.py  live_transcription.py  migration.py  models.py  models_store.py  naming.py  pipeline.py  prompts.py  reporting.py  status.py  transcribe_worker.py  transcription.py  ui_server.py  vad.py
src/manola/prompts/defaults/: brainstorm.md  case_interview.md  client_update.md  customer_success.md  daily.md  enrich.md  general.md  incident_postmortem.md  internal_sync.md  job_interview.md  one_on_one.md  planning.md  (+8 more)
src/manola/ui_static/: app.css  app.js  index.html
src/nanola/: audio.py  audio_recording.py  cli.py  config.py  cuda.py  doctor.py  errors.py  exporting.py  models.py  models_store.py  naming.py  pipeline.py  reporting.py  transcribe_worker.py  transcription.py
tests/: test_audio_recording.py  test_cli.py  test_config.py  test_diarization.py  test_doctor.py  test_enhancement.py  test_exporting.py  test_jobs.py  test_live_transcription.py  test_migration.py  test_models_store.py  test_naming.py  test_pipeline.py  test_prompts.py  test_reporting.py  test_transcription.py  test_ui_server.py  test_ui_static_assets.py  test_vad.py
(+27 files in other folders)
